[package]
name = "morphnet-gtl"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Geometric Template Learning and Spatial Intelligence Framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/morphnet-gtl"

[dependencies]
# Core ML and tensor operations
ndarray = "0.15"
nalgebra = { version = "0.32", features = ["serde-serialize"] }

# Serialization and I/O
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.4"
memmap2 = "0.9"
sha2 = "0.10"

# Compression
lz4_flex = "0.11"
flate2 = "1.0"

# Image processing
image = "0.24"
imageproc = "0.23"

# Async and parallel processing
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Math and statistics
statrs = "0.16"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-reduction = "0.7"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
eframe = "0.31"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "mmx_benchmark"
harness = false

[[bench]]
name = "morphnet_benchmark"
harness = false
